examples/diagnostics/expected/1193-diagnostics-readonly-property-write.stderr
error: property 'doubled' is read-only (no '#set')
  --> examples/diagnostics/1193-diagnostics-readonly-property-write.sx:15:5
   |
15 |     r.doubled = 10;     // ERROR: property 'doubled' is read-only (no '#set')
   |     ^^^^^^^^^
